/*
 * Copyright 2022 CECTC, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package undolog;

option go_package=".;undolog";

message PbField {
    string Name = 1;
    int32 KeyType = 2;
    sint32 Type = 3;
    bytes Value = 4;
}

message PbRow {
    repeated PbField Fields = 1;
}

message PbTableRecords {
    string TableName = 1;
    repeated PbRow Rows = 2;
}